--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-auto-growing-input",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Auto Growing Input Component for React",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -37,7 +37,8 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.54.4"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17 || ^18",
